# s541a2

./: .gitignore  README.md  Untitled.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
