[project]
name = "s541"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "islp>=0.4.1",
    "jupyter>=1.1.1",
    "notebook>=7.5.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.1",
    "jupyterlab-latex>=4.4.0",
    "pandas-stubs>=3.0.0.260204",
    "scikit-learn-stubs>=0.0.3",
]
